--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
-    "jest": "^24.9.0"
-  }
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+   "testEnvironment": "node",
+   "coveragePathIgnorePatterns": [
+     "/node_modules/"
+   ]
+ }
 }
